School 13.5 MENU JUMP THING IS FIXED!! And other bug fixes, samplers, and few other things

--- a/src/GLSLEditor/Highlighting/HighlightStyles.css
+++ b/src/GLSLEditor/Highlighting/HighlightStyles.css
@@ -49,3 +49,15 @@
 .usertypes{
      -fx-fill: #beaa70;
 }
+
+.number{
+-fx-fill: #bf1010;
+}
+
+.string{
+-fx-fill: #67827f;
+}
+
+.sampler{
+-fx-fill: #b98884;
+}
